@@ -6,6 +6,8 @@
 * Also patch input methods for ARGF
 * Don't try to catch exception when printing to stderr
 * Remove [:colorizer][:output] option
+* Not patching kernel anymore
+* Only pathing string anymore if east_asian_width option is used
 
 == 0.7.3
 * Don't colorize stdout by default
